# music-representing-corpus-virtual

./: .gitignore  LICENSE  README.md  genere_GenerateGraphicScore.py  genere_MarkovModel.py  main.py  requirements.txt
concert_files/pd/: AdaptiveSynth.pd  ArduinoIn.pd  ChordGen.pd  FFTsumLOSS.pd  MVC.pd  NeuralAdditiveSynth.pd  NeuralNetworkOsc.pd  PantonalGenerator.pd  SaxophoneArduino.pd  VCA_chris.pd  algoLPF.pd  algoPAN.pd  blackboxArduino.pd  monosynth.pd  neuron.pd  simpleAdditiveSynth.pd  sum4.pd  sum8.pd  vstplugin_test.pd
concert_files/python/: genere_ConcertScoreGen.py
document_ARXIV/: references.bib  template.tex
document_ARXIV/plot_files_for_paper/: NeuralNet1_output.mid  output.mid  plot.py
genere/: main.py
genere/helperfunctions/: createcanvas.py  drawmanuscriptlines.py  notationplacer.py  notationplacer_helper_dictionary.py  papersizefunctions.py
genere/stochastic_processes/: markovmodels.py
kinderspiel-data/piano/: piano_01.aif  piano_02.aif  piano_03.aif  piano_04.aif  piano_05.aif  piano_06.aif  piano_07.aif  piano_08.aif  piano_09.aif  piano_10.aif  piano_100.aif  piano_101.aif  piano_102.aif  piano_103.aif  piano_104.aif  piano_105.aif  piano_106.aif  piano_107.aif  piano_108.aif  piano_109.aif  piano_11.aif  piano_110.aif  piano_111.aif  piano_112.aif  piano_113.aif  piano_114.aif  piano_115.aif  piano_116.aif  piano_117.aif  piano_118.aif  piano_119.aif  piano_12.aif  piano_120.aif  piano_121.aif  piano_122.aif  piano_123.aif  piano_124.aif  piano_125.aif  piano_126.aif  piano_127.aif  (+835 more)
neural_nets/: README.md  neural_net1.py  neural_net2.py  neural_net3.py  neural_net4.py  neural_net_jatin.py  output.mid
neural_nets/RTNeuralutils/: modelutils.py
neural_nets/classes/: DataAccessor.py  DataGenerator.py  DataIngester.py  DataPlotter.py  InstrumentCreator.py  ModelCreator.py
neural_nets/commentless_code_for_presentation/: genere_IntroductoryExample.py  neural_net1.py  neural_net2.py  neural_net3.py  neural_net4.py
neural_nets/data/: maestro-v3.0.0.csv  maestrov3.csv
neural_nets/saved_models_h5/: neural_net1.h5  (+2 more)
waveform-gen-plugin/: .gitignore  CMakeLists.txt  REAMDE.md
waveform-gen-plugin/cli/: CMakeLists.txt  waveform_gen_cli.cpp
waveform-gen-plugin/cmake/: get_cpm.cmake
waveform-gen-plugin/plugin/: CMakeLists.txt  waveform_gen_plugin.cpp  waveform_gen_plugin.h
waveform-gen-plugin/src/: waveform_gen.cpp  waveform_gen.h
(+7 files in other folders)
